--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,7 +1,7 @@
 {
   "name": "Node.js",
   "image": "mcr.microsoft.com/devcontainers/javascript-node:18",
-  "forwardPorts": [3000],
+  "forwardPorts": [3000, 5000],
 
   "features": {
     "ghcr.io/warrenbuckley/codespace-features/sqlite:1": {}
